# pymutantic

./: .gitignore  .isort.cfg  LICENSE  README.md  pyproject.toml  release
pymutantic/: DETAILS.md  __init__.py  _json_path.py  _migrate.py  _mutant.py  json_path.py  migrate.py  mutant.py  test_json_path.py  test_migrate.py  test_mutant.py
