[tool.poetry]
name = "pymutantic"
version = "0.3.0"
description = ""
authors = ["Daniel Bradburn <daniel.bradburn@crunchr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycrdt = "^0.9.7"
jsonpatch = "^1.33"
pydantic = "^2.8.2"
munch = "^4.0.0"
pytest = "^8.3.2"
jsonpath-ng = "^1.6.1"
black = "^24.4.2"
toolz = "^0.12.1"
mypy = "^1.11.1"
isort = "^5.13.2"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "pydantic.mypy"
