[tool.poetry]
name = "pymutantic"
version = "0.10.0"
description = ""
authors = ["Daniel Bradburn <daniel.bradburn@crunchr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycrdt = "^0.9.7"
pydantic = "^2.7"
munch = "^4.0.0"
jsonpath-ng = "^1.6.1"
toolz = "^0.12.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.11.1"
pytest = "^8.3.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "pydantic.mypy"
